instructor courses page

--- a/src/app/pages/instructor/components/header/header.component.html
+++ b/src/app/pages/instructor/components/header/header.component.html
@@ -1,5 +1,5 @@
 <!-- Header Start -->
-<header class="db-header clearfix">
+<!-- <header class="db-header clearfix">
     <button type="button" id="toggleMenu" class="toggle_menu">
       <i class='uil uil-bars'></i>
     </button>
@@ -131,5 +131,6 @@
             </li>
         </ul>
     </div>
-</header>
+</header> -->
 <!-- Header End -->
+
