--- a/src/app/pages/user/user-dashboard/user-dashboard.component.html
+++ b/src/app/pages/user/user-dashboard/user-dashboard.component.html
@@ -73,7 +73,71 @@
                                 </div>
                             </div>
                         </div>
-                    </div><div class="item">
+                    </div>
+                    <div class="item">
+                        <div class="fcrse_1 mb-20">
+                            <a [routerLink]="['/user/viewCourse/12345']"  class="fcrse_img">
+                                <img src="assets/images/courses/img-14.jpg" alt="">
+                                <div class="course-overlay">
+                                    <span class="play_btn1"><i class="uil uil-play"></i></span>
+                                    <div class="crse_timer">
+                                        12 {{ 'hours' | translate }}
+                                    </div>
+                                </div>
+                            </a>
+                            <div class="fcrse_content">
+                                <a href="course_detail_view.html" class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3</a>
+                                <a href="#" class="crse-cate">English</a>
+                                <div class="auth1lnkprce">
+                                    <p class="cr1fot">{{ 'By' | translate}} <a href="#">John Doe</a></p>
+                                    <div class="prce142">$4</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="fcrse_1 mb-20">
+                            <a [routerLink]="['/user/viewCourse/12345']"  class="fcrse_img">
+                                <img src="assets/images/courses/img-14.jpg" alt="">
+                                <div class="course-overlay">
+                                    <span class="play_btn1"><i class="uil uil-play"></i></span>
+                                    <div class="crse_timer">
+                                        12 {{ 'hours' | translate }}
+                                    </div>
+                                </div>
+                            </a>
+                            <div class="fcrse_content">
+                                <a href="course_detail_view.html" class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3</a>
+                                <a href="#" class="crse-cate">English</a>
+                                <div class="auth1lnkprce">
+                                    <p class="cr1fot">{{ 'By' | translate}} <a href="#">John Doe</a></p>
+                                    <div class="prce142">$4</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="fcrse_1 mb-20">
+                            <a [routerLink]="['/user/viewCourse/12345']"  class="fcrse_img">
+                                <img src="assets/images/courses/img-14.jpg" alt="">
+                                <div class="course-overlay">
+                                    <span class="play_btn1"><i class="uil uil-play"></i></span>
+                                    <div class="crse_timer">
+                                        12 {{ 'hours' | translate }}
+                                    </div>
+                                </div>
+                            </a>
+                            <div class="fcrse_content">
+                                <a href="course_detail_view.html" class="crse14s">Build Responsive Real World Websites with HTML5 and CSS3</a>
+                                <a href="#" class="crse-cate">English</a>
+                                <div class="auth1lnkprce">
+                                    <p class="cr1fot">{{ 'By' | translate}} <a href="#">John Doe</a></p>
+                                    <div class="prce142">$4</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
                         <div class="fcrse_1 mb-20">
                             <a [routerLink]="['/user/viewCourse/12345']"  class="fcrse_img">
                                 <img src="assets/images/courses/img-14.jpg" alt="">
