--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -1,4 +1,4 @@
-<app-user-header></app-user-header>
+<!-- <app-user-header></app-user-header> -->
 <app-user-sidebar></app-user-sidebar>
 <div class="wrapper">
     <router-outlet></router-outlet>
