--- a/src/app/pages/instructor/instructor-add-chapter/instructor-add-chapter.component.html
+++ b/src/app/pages/instructor/instructor-add-chapter/instructor-add-chapter.component.html
@@ -27,11 +27,9 @@
                                                 <label>Course*</label>
                                             </div>
                                             <select formControlName="course">
-                                                <option value="">Select Course</option>
-                                                <option value="1">Course 1</option>
-                                                <option value="2">Course 2</option>
-                                                <option value="3">Course 3</option>
-                                                <option value="4">Course 4</option>
+                                                <option disabled selected value="">Select Course</option>
+                                                <option *ngFor="let course of instructorCourses" value="{{course.id}}">{{course.course_title}}</option>
+                                                
                                             </select>
                                         </div>
                                         <div class="col-lg-4 col-md-4">
