--- a/src/app/pages/instructor/instructor-courses/instructor-courses.component.html
+++ b/src/app/pages/instructor/instructor-courses/instructor-courses.component.html
@@ -24,74 +24,24 @@
 									</tr>
 								</thead>
 								<tbody>
-									<tr>
-										<td class="text-center">IT-001</td>
-										<td>Course Title Here</td>
-										<td class="text-center">06 April 2020 | 08:31</td>
-										<td class="text-center">15</td>
-										<td class="text-center">5</td>
-										<td class="text-center"><a href="#">English</a></td>
-										<td class="text-center"><b class="course_active">Active</b></td>
+									<tr *ngFor="let course of instructorCourses">
+										<td class="text-center">{{course.id}}</td>
+										<td>{{course.course_title}}</td>
+										<td class="text-center">{{course.createdDate | date : 'medium'}}</td>
+										<td class="text-center">{{course.sales}}</td>
+										<td class="text-center">{{course.num_of_chapters}}</td>
+										<td class="text-center"><a href="#">{{course.category}}</a></td>
+										<td class="text-center"><b class="course_active">{{course.course_status}}</b></td>
 										<td class="text-center">
 											<a href="#" title="Edit" class="gray-s"><i class="uil uil-edit-alt"></i></a>
 											<a href="#" title="Delete" class="gray-s"><i class="uil uil-trash-alt"></i></a>
 										</td>
 									</tr>
-									<tr>
-										<td class="text-center">IT-002</td>
-										<td>Course Title Here</td>
-										<td class="text-center">05 April 2020 | 05:15</td>
-										<td class="text-center">30</td>
-										<td class="text-center">3</td>
-										<td class="text-center"><a href="#">Math</a></td>
-										<td class="text-center"><b class="course_pending">Pending</b></td>
-										<td class="text-center">
-											<a href="#" title="Edit" class="gray-s"><i class="uil uil-edit-alt"></i></a>
-											<a href="#" title="Delete" class="gray-s"><i class="uil uil-trash-alt"></i></a>
-										</td>
-									</tr>
-									<tr>
-										<td class="text-center">IT-003</td>
-										<td>Course Title</td>
-										<td class="text-center">03 April 2020 | 01:30</td>
-										<td class="text-center">14</td>
-										<td class="text-center">5</td>
-										<td class="text-center"><a href="#">science</a></td>
-										<td class="text-center"><b class="course_active">Active</b></td>
-										<td class="text-center">
-											<a href="#" title="Edit" class="gray-s"><i class="uil uil-edit-alt"></i></a>
-											<a href="#" title="Delete" class="gray-s"><i class="uil uil-trash-alt"></i></a>
-										</td>
-									</tr>
-									<tr>
-										<td class="text-center">IT-004</td>
-										<td>Course Title Here</td>
-										<td class="text-center">02 April 2020 | 05:15</td>
-										<td class="text-center">110</td>
-										<td class="text-center">9</td>
-										<td class="text-center"><a href="#">Arabic</a></td>
-										<td class="text-center"><b class="course_active">Active</b></td>
-										<td class="text-center">
-											<a href="#" title="Edit" class="gray-s"><i class="uil uil-edit-alt"></i></a>
-											<a href="#" title="Delete" class="gray-s"><i class="uil uil-trash-alt"></i></a>
-										</td>
-									</tr>
-									<tr>
-										<td class="text-center">IT-002</td>
-										<td>Course Title Here</td>
-										<td class="text-center">28 March 2020 | 05:15</td>
-										<td class="text-center">185</td>
-										<td class="text-center">10</td>
-										<td class="text-center"><a href="#">History</a></td>
-										<td class="text-center"><b class="course_pending">Pending</b></td>
-										<td class="text-center">
-											<a href="#" title="Edit" class="gray-s"><i class="uil uil-edit-alt"></i></a>
-											<a href="#" title="Delete" class="gray-s"><i class="uil uil-trash-alt"></i></a>
-										</td>
-									</tr>
+								
 								</tbody>
 							</table>
 						</div>
+						<ngx-loading [show]="loading"></ngx-loading>
 						
 					</div>
 				</div>
