--- a/src/app/pages/user/components/user-sidebar/user-sidebar.component.html
+++ b/src/app/pages/user/components/user-sidebar/user-sidebar.component.html
@@ -1,3 +1,147 @@
+
+<!-- Header Start -->
+<input type="checkbox" id="sidekickToggle">
+<label class="sidekick-toggle collapse_menu" for="sidekickToggle">
+    <i class="uil uil-bars collapse_menu--icon "></i>
+    <span class="collapse_menu--label"></span>
+</label>
+<header class="db-header clearfix">
+    <!-- <button type="button" id="toggleMenu" class="toggle_menu">
+      <i class='uil uil-bars'></i>
+    </button>
+    <button id="collapse_menu" class="collapse_menu">
+        <i class="uil uil-bars collapse_menu--icon "></i>
+        <span class="collapse_menu--label"></span>
+    </button> -->
+    <div class="main_logo" id="logo">
+        <a href="index.html"><img src="assets/images/logo-inner.png" alt=""></a>
+        <a href="index.html"><img class="logo-inverse" src="assets/images/logo-inner.png" alt=""></a>
+        <span>Smart Academy</span>
+    </div>
+    <div class="search120">
+        <div class="ui search">
+            <div class="ui left icon input swdh10">
+                <input class="prompt srch10" type="text" placeholder="Search for Tuts Videos, Tutors, Tests and more..">
+                <i class='uil uil-search-alt icon icon1'></i>
+            </div>
+        </div>
+    </div>
+    <div class="header_right">
+        <ul>
+            <li class="ui">
+                <a [routerLink]="['cart']" routerLinkActive="router-link-active"  class="option_links"><i class="uil uil-shopping-cart-alt"></i><span
+                        class="noti_count">5</span></a>
+            </li>
+            <li id="message-dropdown" class="ui">
+                <a href="#" class="option_links"><i class='uil uil-envelope-alt'></i><span
+                        class="noti_count">3</span></a>
+                <div class="menu drop-menu">
+                    <a href="#" class="channel_my item">
+                        <div class="profile_link">
+                            <img src="assets/images/left-imgs/img-6.jpg" alt="">
+                            <div class="pd_content">
+                                <h6>Zoena Singh</h6>
+                                <p>Hi! Sir, How are you. I ask you one thing please explain it this video price.</p>
+                                <span class="nm_time">2 min ago</span>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="channel_my item">
+                        <div class="profile_link">
+                            <img src="assets/images/left-imgs/img-5.jpg" alt="">
+                            <div class="pd_content">
+                                <h6>Joy Dua</h6>
+                                <p>Hello, I paid you video tutorial but did not play error 404.</p>
+                                <span class="nm_time">10 min ago</span>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="channel_my item">
+                        <div class="profile_link">
+                            <img src="assets/images/left-imgs/img-8.jpg" alt="">
+                            <div class="pd_content">
+                                <h6>Jass</h6>
+                                <p>Thanks Sir, Such a nice video.</p>
+                                <span class="nm_time">25 min ago</span>
+                            </div>
+                        </div>
+                    </a>
+                    <a class="vbm_btn" href="instructor_messages.html">View All <i class='uil uil-arrow-right'></i></a>
+                </div>
+            </li>
+            <li id="notification-dropdown" class="ui">
+                <a href="#" class="option_links"><i class='uil uil-bell'></i><span class="noti_count">3</span></a>
+                <div class="menu drop-menu">
+                    <a href="#" class="channel_my item">
+                        <div class="profile_link">
+                            <img src="assets/images/left-imgs/img-1.jpg" alt="">
+                            <div class="pd_content">
+                                <h6>Rock William</h6>
+                                <p>Like Your Comment On Video <strong>How to create sidebar menu</strong>.</p>
+                                <span class="nm_time">2 min ago</span>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="channel_my item">
+                        <div class="profile_link">
+                            <img src="assets/images/left-imgs/img-2.jpg" alt="">
+                            <div class="pd_content">
+                                <h6>Jassica Smith</h6>
+                                <p>Added New Review In Video <strong>Full Stack PHP Developer</strong>.</p>
+                                <span class="nm_time">12 min ago</span>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="#" class="channel_my item">
+                        <div class="profile_link">
+                            <img src="assets/images/left-imgs/img-9.jpg" alt="">
+                            <div class="pd_content">
+                                <p> Your Membership Approved <strong>Upload Video</strong>.</p>
+                                <span class="nm_time">20 min ago</span>
+                            </div>
+                        </div>
+                    </a>
+                    <a class="vbm_btn" href="instructor_notifications.html">View All <i
+                            class='uil uil-arrow-right'></i></a>
+                </div>
+            </li>
+            <li id="account-dropdown" class="ui">
+                <a href="#" class="opts_account">
+                    <img src="assets/images/hd_dp.jpg" alt="">
+                </a>
+                <div class="menu drop-menu">
+                    <div class="channel_my">
+                        <div class="profile_link">
+                            <img src="assets/images/hd_dp.jpg" alt="">
+                            <div class="pd_content">
+                                <div class="rhte85">
+                                    <h6>Joginder Singh</h6>
+                                    <div class="mef78" title="Verify">
+                                        <i class='uil uil-check-circle'></i>
+                                    </div>
+                                </div>
+                                <span>gambol943@gmail.com</span>
+                            </div>
+                        </div>
+                        <a href="my_instructor_profile_view.html" class="dp_link_12">View Instructor Profile</a>
+                    </div>
+                    <div class="night_mode_switch__btn">
+                        <a href="#" id="night-mode" class="btn-night-mode">
+                            <i class="uil uil-moon"></i> Night mode
+                            <span class="btn-night-mode-switch">
+                                <span class="uk-switch-button"></span>
+                            </span>
+                        </a>
+                    </div>
+                    <a href="help.html" class="item channel_item">Help</a>
+                    <a href="feedback.html" class="item channel_item">Send Feedback</a>
+                    <a href="sign_in.html" class="item channel_item">Sign Out</a>
+                </div>
+            </li>
+        </ul>
+    </div>
+</header>
+<!-- Header End -->
 <!-- Left Sidebar Start -->
 <nav class="vertical_nav">
     <div class="left_section menu_left" id="js-menu">
@@ -16,55 +160,124 @@
                     </a>
                 </li>
                 <!-- <li class="menu--item">
-                    <a href="student_courses.html" class="menu--link" title="Courses">
-                        <i class='uil uil-book-alt menu--icon'></i>
-                        <span class="menu--label">Purchased Courses</span>
+                    <a href="saved_courses.html" class="menu--link" title="Saved Courses">
+                        <i class="uil uil-heart-alt menu--icon"></i>
+                        <span class="menu--label">Saved Courses</span>
                     </a>
                 </li>
-                <li class="menu--item">
-                    <a href="student_messages.html" class="menu--link" title="Messages">
-                        <i class='uil uil-comments menu--icon'></i>
-                        <span class="menu--label">Messages</span>
-                    </a>
-                </li>
-                <li class="menu--item">
-                    <a href="student_notifications.html" class="menu--link" title="Notifications">
-                      <i class='uil uil-bell menu--icon'></i>
-                      <span class="menu--label">Notifications</span>
-                    </a>
-                </li>
-                <li class="menu--item">
-                    <a href="student_my_certificates.html" class="menu--link" title="My Certificates">
-                      <i class='uil uil-award menu--icon'></i>
-                      <span class="menu--label">My Certificates</span>
-                    </a>
-                </li>
-                <li class="menu--item">
-                    <a href="student_all_reviews.html" class="menu--link" title="Reviews">
-                      <i class='uil uil-star menu--icon'></i>
-                      <span class="menu--label">Reviews</span>
-                    </a>
-                </li>
-                <li class="menu--item">
-                    <a href="student_credits.html" class="menu--link" title="Credits">
-                      <i class='uil uil-wallet menu--icon'></i>
-                      <span class="menu--label">Credits</span>
-                    </a>
-                </li>
-                <li class="menu--item">
-                    <a href="student_statements.html" class="menu--link" title="Statements">
-                      <i class='uil uil-file-alt menu--icon'></i>
-                      <span class="menu--label">Statements</span>
-                    </a>
+                <li class="menu--item  menu--item__has_sub_menu">
+                    <label class="menu--link" title="Pages">
+                        <i class='uil uil-file menu--icon'></i>
+                        <span class="menu--label">Pages</span>
+                    </label>
+                    <ul class="sub_menu">
+                        <li class="sub_menu--item">
+                            <a href="about_us.html" class="sub_menu--link">About</a>
+                        </li>
+                        <li class="sub_menu--item">
+                            <a href="sign_in.html" class="sub_menu--link">Sign In</a>
+                        </li>
+                        <li class="sub_menu--item">
+                            <a href="sign_up.html" class="sub_menu--link">Sign Up</a>
+                        </li>
+                        <li class="sub_menu--item">
+                            <a href="sign_up_steps.html" class="sub_menu--link">Sign Up Steps</a>
+                        </li>
+                        <li class="sub_menu--item">
+                            <a href="membership.html" class="sub_menu--link">Paid Membership</a>
+                        </li>
+                        <li class="sub_menu--item">
+                            <a href="course_detail_view.html" class="sub_menu--link">Course Detail View</a>
+                        </li>
+                        <li class="sub_menu--item">
+                            <a href="checkout_membership.html" class="sub_menu--link">Checkout</a>
+                        </li>
+                        <li class="sub_menu--item">
+                            <a href="invoice.html" class="sub_menu--link">Invoice</a>
+                        </li>
+                        <li class="sub_menu--item">
+                            <a href="career.html" class="sub_menu--link">Career</a>
+                        </li>
+                        <li class="sub_menu--item">
+                            <a href="apply_job.html" class="sub_menu--link">Job Apply</a>
+                        </li>
+                        <li class="sub_menu--item">
+                            <a href="our_blog.html" class="sub_menu--link">Our Blog</a>
+                        </li>
+                        <li class="sub_menu--item">
+                            <a href="blog_single_view.html" class="sub_menu--link">Blog Detail View</a>
+                        </li>
+                        <li class="sub_menu--item">
+                            <a href="company_details.html" class="sub_menu--link">Company Details</a>
+                        </li>
+                        <li class="sub_menu--item">
+                            <a href="press.html" class="sub_menu--link">Press</a>
+                        </li>
+                        <li class="sub_menu--item">
+                            <a href="live_output.html" class="sub_menu--link">Live Stream View</a>
+                        </li>
+                        <li class="sub_menu--item">
+                            <a href="add_streaming.html" class="sub_menu--link">Add live Stream</a>
+                        </li>
+                        <li class="sub_menu--item">
+                            <a href="search_result.html" class="sub_menu--link">Search Result</a>
+                        </li>
+                        <li class="sub_menu--item">
+                            <a href="thank_you.html" class="sub_menu--link">Thank You</a>
+                        </li>
+                        <li class="sub_menu--item">
+                            <a href="coming_soon.html" class="sub_menu--link">Coming Soon</a>
+                        </li>
+                        <li class="sub_menu--item">
+                            <a href="error_404.html" class="sub_menu--link">Error 404</a>
+                        </li>
+                    </ul>
                 </li> -->
             </ul>
         </div>
-        <!-- <div class="left_section pt-2">
+        <!-- <div class="left_section">
+            <h6 class="left_title">SUBSCRIPTIONS</h6>
+            <ul>
+                <li class="menu--item">
+                    <a href="instructor_profile_view.html" class="menu--link user_img">
+                        <img src="images/left-imgs/img-1.jpg" alt="">
+                        Rock Smith
+                        <div class="alrt_dot"></div>
+                    </a>
+                </li>
+                <li class="menu--item">
+                    <a href="instructor_profile_view.html" class="menu--link user_img">
+                        <img src="images/left-imgs/img-2.jpg" alt="">
+                        Jassica William
+                    </a>
+                    <div class="alrt_dot"></div>
+                </li>
+                <li class="menu--item">
+                    <a href="all_instructor.html" class="menu--link" title="Browse Instructors">
+                        <i class='uil uil-plus-circle menu--icon'></i>
+                        <span class="menu--label">Browse Instructors</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="left_section pt-2">
             <ul>
                 <li class="menu--item">
                     <a href="setting.html" class="menu--link" title="Setting">
                         <i class='uil uil-cog menu--icon'></i>
                         <span class="menu--label">Setting</span>
+                    </a>
+                </li>
+                <li class="menu--item">
+                    <a href="help.html" class="menu--link" title="Help">
+                        <i class='uil uil-question-circle menu--icon'></i>
+                        <span class="menu--label">Help</span>
+                    </a>
+                </li>
+                <li class="menu--item">
+                    <a href="report_history.html" class="menu--link" title="Report History">
+                        <i class='uil uil-windsock menu--icon'></i>
+                        <span class="menu--label">Report History</span>
                     </a>
                 </li>
                 <li class="menu--item">
@@ -74,6 +287,21 @@
                     </a>
                 </li>
             </ul>
+        </div>
+        <div class="left_footer">
+            <ul>
+                <li><a href="about_us.html">About</a></li>
+                <li><a href="press.html">Press</a></li>
+                <li><a href="contact_us.html">Contact Us</a></li>
+                <li><a href="coming_soon.html">Advertise</a></li>
+                <li><a href="coming_soon.html">Developers</a></li>
+                <li><a href="terms_of_use.html">Copyright</a></li>
+                <li><a href="terms_of_use.html">Privacy Policy</a></li>
+                <li><a href="terms_of_use.html">Terms</a></li>
+            </ul>
+            <div class="left_footer_content">
+                <p>© 2020 <strong>Cursus</strong>. All Rights Reserved.</p>
+            </div>
         </div> -->
     </div>
 </nav>
